--- a/part2.ipynb
+++ b/part2.ipynb
@@ -6,12 +6,12 @@
         "import pandas as pd\n",
         "import os\n",
         "import glob\n",
-        "import numpy\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot\n",
         "from datetime import datetime"
       ],
       "outputs": [],
-      "execution_count": 9,
+      "execution_count": 48,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -55,6 +55,19 @@
     {
       "cell_type": "code",
       "source": [
+        "del data2016"
+      ],
+      "outputs": [],
+      "execution_count": 38,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "li = []\n",
         "\n",
         "for filename in filenames:\n",
@@ -64,7 +77,7 @@
         "data2016 = pd.concat(li, axis=0, ignore_index=True)"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 40,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -79,30 +92,30 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 27,
+          "execution_count": 41,
           "data": {
             "text/plain": [
-              "room_id                     0\n",
-              "host_id                     0\n",
-              "room_type                   0\n",
-              "borough                     0\n",
-              "neighborhood                0\n",
-              "reviews                     0\n",
-              "overall_satisfaction        0\n",
-              "accommodates            10764\n",
-              "bedrooms                    0\n",
-              "price                       0\n",
-              "minstay                  7686\n",
-              "latitude                    0\n",
-              "longitude                   0\n",
-              "last_modified               0\n",
+              "room_id                      0\n",
+              "host_id                      0\n",
+              "room_type                    0\n",
+              "borough                      0\n",
+              "neighborhood                 0\n",
+              "reviews                      0\n",
+              "overall_satisfaction    148698\n",
+              "accommodates             10764\n",
+              "bedrooms                     0\n",
+              "price                        0\n",
+              "minstay                   7686\n",
+              "latitude                     0\n",
+              "longitude                    0\n",
+              "last_modified                0\n",
               "dtype: int64"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 27,
+      "execution_count": 41,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -116,7 +129,7 @@
         "data2016['last_modified'] = data2016['last_modified'].dt.strftime('%Y-%m-%d')"
       ],
       "outputs": [],
-      "execution_count": 10,
+      "execution_count": 43,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -131,26 +144,25 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 11,
+          "execution_count": 50,
           "data": {
             "text/plain": [
-              "NaN     148698\n",
-              " 5.0    110869\n",
-              " 4.5     98221\n",
-              " 4.0     22458\n",
-              " 3.5      4075\n",
-              " 3.0      1622\n",
-              " 2.0       318\n",
-              " 2.5       302\n",
-              " 1.0       195\n",
-              " 1.5        21\n",
+              "5.0    110869\n",
+              "4.5     98221\n",
+              "4.0     22458\n",
+              "3.5      4075\n",
+              "3.0      1622\n",
+              "2.0       318\n",
+              "2.5       302\n",
+              "1.0       195\n",
+              "1.5        21\n",
               "Name: overall_satisfaction, dtype: int64"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 11,
+      "execution_count": 50,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -160,40 +172,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data2016.borough.value_counts(dropna=False)"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "execution_count": 12,
-          "data": {
-            "text/plain": [
-              "Manhattan        189363\n",
-              "Brooklyn         156073\n",
-              "Queens            33704\n",
-              "Bronx              5519\n",
-              "Staten Island      2120\n",
-              "Name: borough, dtype: int64"
-            ]
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 12,
-      "metadata": {
-        "collapsed": false,
-        "outputHidden": false,
-        "inputHidden": false
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "meansat = data2016['overall_satisfaction'].mean()\n",
-        "data2016['overall_satisfaction'] = data2016['overall_satisfaction'].fillna(meansat)"
+        "data2016 = data2016[np.isfinite(data2016['overall_satisfaction'])]"
       ],
       "outputs": [],
-      "execution_count": 24,
+      "execution_count": 49,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -203,31 +185,24 @@
     {
       "cell_type": "code",
       "source": [
-        "data2016.overall_satisfaction.value_counts(dropna=False)"
+        "data2016.room_type.value_counts(dropna=False)"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 26,
+          "execution_count": 52,
           "data": {
             "text/plain": [
-              "4.649332    148698\n",
-              "5.000000    110869\n",
-              "4.500000     98221\n",
-              "4.000000     22458\n",
-              "3.500000      4075\n",
-              "3.000000      1622\n",
-              "2.000000       318\n",
-              "2.500000       302\n",
-              "1.000000       195\n",
-              "1.500000        21\n",
-              "Name: overall_satisfaction, dtype: int64"
+              "Entire home/apt    129837\n",
+              "Private room       101219\n",
+              "Shared room          7025\n",
+              "Name: room_type, dtype: int64"
             ]
           },
           "metadata": {}
         }
       ],
-      "execution_count": 26,
+      "execution_count": 52,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -240,7 +215,7 @@
         "data2016.to_csv('data_2016.csv',index=False)"
       ],
       "outputs": [],
-      "execution_count": 29,
+      "execution_count": 53,
       "metadata": {
         "collapsed": false,
         "outputHidden": true,
